--- a/main.html
+++ b/main.html
@@ -132,7 +132,10 @@
                     </div>
                     <div class="content-block">
                       <!-- <p><a href="#" onclick="FBLogin();" class="button button-big button-fill button-raised color-indigo">Facebook</a></p> -->
-                      <center><a href="" onclick="FBLogin();" class="link icon-only"><img src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/></a></center>
+                      <center>
+                       <!--  <a href="" onclick="FBLogin();" class="link icon-only"><img src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/></a> -->
+                        <img onclick="FBLogin();" src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/>
+                      </center>
                     </div>
                     <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
                       <ul>
