--- a/main.html
+++ b/main.html
@@ -8,10 +8,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="theme-color" content="#2196f3">
     <title>Envp</title>
-    <link rel="stylesheet" href="css/framework7.material.css">
-    <link rel="stylesheet" href="css/framework7.material.colors.css">
+    
+    <!-- <link rel="stylesheet" href="css/framework7.material.css">
+    <link rel="stylesheet" href="css/framework7.material.colors.css"> 
+    <link rel="stylesheet" href="css/envyp.css"> -->
+    <link rel="stylesheet" href="css/framework7.material.min.css">
+    <link rel="stylesheet" href="css/framework7.material.colors.min.css">
+    <link rel="stylesheet" href="css/envyp.min.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/envyp.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/envp-icon-40-40.png">
     <link href="css/font.css" rel="stylesheet">
@@ -211,6 +215,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxk72Dwc6EjFcJZ4sdcAIyNev1289u5q4&libraries=places"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/framework7.js"></script>
-    <script type="text/javascript" src="js/envyp.js"></script>
+    <!-- <script type="text/javascript" src="js/envyp.js"></script> -->
+    <script type="text/javascript" src="js/envyp.min.js"></script>
   </body>
 </html>
