--- a/main.html
+++ b/main.html
@@ -9,12 +9,12 @@
     <meta name="theme-color" content="#2196f3">
     <title>Envp</title>
     
-    <!-- <link rel="stylesheet" href="css/framework7.material.css">
+    <link rel="stylesheet" href="css/framework7.material.css">
     <link rel="stylesheet" href="css/framework7.material.colors.css"> 
-    <link rel="stylesheet" href="css/envyp.css"> -->
-    <link rel="stylesheet" href="css/framework7.material.min.css">
+    <link rel="stylesheet" href="css/envyp.css">
+    <!-- <link rel="stylesheet" href="css/framework7.material.min.css">
     <link rel="stylesheet" href="css/framework7.material.colors.min.css">
-    <link rel="stylesheet" href="css/envyp.min.css">
+    <link rel="stylesheet" href="css/envyp.min.css"> -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/envp-icon-40-40.png">
