--- a/main.html
+++ b/main.html
@@ -215,7 +215,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxk72Dwc6EjFcJZ4sdcAIyNev1289u5q4&libraries=places"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/framework7.js"></script>
-    <!-- <script type="text/javascript" src="js/envyp.js"></script> -->
-    <script type="text/javascript" src="js/envyp.min.js"></script>
+    <script type="text/javascript" src="js/envyp.js"></script>
+    <!-- <script type="text/javascript" src="js/envyp.min.js"></script> -->
   </body>
 </html>
