--- a/roster_detail.html
+++ b/roster_detail.html
@@ -22,6 +22,14 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
+                  <div id="lbl-roster-games-played" class="item-title"></div>
+                  <div id="roster-games-played" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner"> 
                   <div id="lbl-roster-det-score" class="item-title"></div>
                   <div id="roster-ppg" class="item-after"></div>
                 </div>
