--- a/tournament_roster_list.html
+++ b/tournament_roster_list.html
@@ -3,10 +3,12 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" id="btn-tournament-detail-back" class="back link icon-only"><i class="icon icon-back"></i></a>
+          <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div id="lbl-tournament-roster-list" class="center"></div>
-        <div class="right"></div>
+        <div class="right">
+          <a href="#" id="btn-tournament-detail-back" class="back link icon-only"><i class="fa fa-plus" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
     <form data-search-list=".virtual-list" class="searchbar searchbar-init">
