--- a/team_stats.html
+++ b/team_stats.html
@@ -11,7 +11,10 @@
     <div class="page-content" style="padding-top:56px;">
       <div style="width:100%; background-color:#34495E; padding-top:20px; padding-bottom:10px;">
         <img id="img-team-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
-        <center><p id="p-team-name" style="font-size:17px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
+        <center>
+          <p id="p-team-name" style="font-size:17px; font-weight:bold; color:white; margin-bottom:0px;"></p>
+          <p style="color:white; margin-top:0px;"><font id="team-win-lose" size="2"></font></p>
+          </center>
       </div>
       <div class="list-block">
           <ul>
