--- a/main.html
+++ b/main.html
@@ -15,7 +15,8 @@
     <!-- <link rel="stylesheet" href="css/framework7.material.min.css">
     <link rel="stylesheet" href="css/framework7.material.colors.min.css">
     <link rel="stylesheet" href="css/envyp.min.css"> -->
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
+    <!-- <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/envp-icon-40-40.png">
     <link href="css/font.css" rel="stylesheet">
@@ -23,7 +24,8 @@
 
     <style>
       body {
-        font-family: 'Source Sans Pro', sans-serif;
+        /*font-family: 'Source Sans Pro', sans-serif;*/
+        font-family: 'Lato', sans-serif;
       }
     </style>
   </head>
