--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/envyp.min.css"> -->
     <!-- <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="icon" href="img/envp-icon-40-40.png">
+    <link rel="icon" href="img/envp-icon-e.png">
     <link href="css/font.css" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet"> -->
 
