--- a/tournament_add.html
+++ b/tournament_add.html
@@ -24,7 +24,7 @@
           </ul>
         </div> -->
         <div onclick="getTournamentImage();">
-          <img id="tournament-image" src="img/envp-icon-ldpi.png" width="115px" height="115px" class="img-circle fit center">
+          <img id="tournament-image" src="img/envp-icon-e.png" width="115px" height="115px" class="img-circle fit center">
         </div>
         <div id="lbl-add-tournament-details" class="content-block-title" style="padding-top:0px;"></div>
         <div class="list-block inputs-list">
