--- a/team_edit.html
+++ b/team_edit.html
@@ -14,7 +14,7 @@
     <div class="page-content" style="padding-top:50px;">
         <div id="lbl-team-edit-upload-image" class="content-block-title"></div>
         <div onclick="editTeamImage();">
-          <img id="team-edit-image" src="img/envp-icon.png" width="115px" height="115px" class="img-circle fit center">
+          <img id="team-edit-image" src="img/envp-icon-e.png" width="115px" height="115px" class="img-circle fit center">
         </div>
         <div id="lbl-team-edit-details" class="content-block-title"></div>
         <div class="list-block inputs-list">
