--- a/tournament_edit.html
+++ b/tournament_edit.html
@@ -24,7 +24,7 @@
           </ul>
         </div> -->
         <div onclick="editTournamentImage();">
-          <img id="edit-tournament-image" src="img/envp-icon-ldpi.png" width="115px" height="115px" class="img-circle fit center">
+          <img id="edit-tournament-image" src="img/envp-icon-e.png" width="115px" height="115px" class="img-circle fit center">
         </div>
         <div id="lbl-edit-tournament-details" class="content-block-title" style="padding-top:0px;"></div>
         <div class="list-block inputs-list">
