--- a/choose_sports.html
+++ b/choose_sports.html
@@ -12,19 +12,19 @@
         </div>
       </div>
     </div>
-    <div class="page-content">
+    <div class="page-content" style="padding-top:90px;">
       <div class="ks-grid">
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=1&image_url=img/basketball.png"><img src="img/basketball.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Basketball</b></p></div>
-          <div class="col-50"><a href="home.html?sport_id=2&image_url=img/floorball.png"><img src="img/floorball.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Floorball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=1&image_url=img/basketball.png"><img src="img/basketball.png" class="img-responsive icon-sports" alt="" style="width:80px; height: 90px;"/></a><p><b>Basketball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=2&image_url=img/floorball.png"><img src="img/floorball.png" class="img-responsive icon-sports" alt="" style="width:80px; height: 90px;"/></a><p><b>Floorball</b></p></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=3&image_url=img/football.png"><img src="img/football.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Football</b></p></div>
-          <div class="col-50"><a href="home.html?sport_id=4&image_url=img/handball.jpg"><img src="img/handball.jpg" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Handball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=3&image_url=img/football.png"><img src="img/football.png" class="img-responsive icon-sports" alt="" style="width:80px; height: 90px;"/></a><p><b>Football</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=4&image_url=img/handball.jpg"><img src="img/handball.jpg" class="img-responsive icon-sports" alt="" style="width:80px; height: 90px;"/></a><p><b>Handball</b></p></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=5&image_url=img/icehokey.png"><img src="img/icehokey.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Ice Hockey</b></p></div>
-          <div class="col-50"><a href="home.html?sport_id=6&image_url=img/rugby.jpg"><img src="img/rugby.jpg" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Rugby</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=5&image_url=img/icehokey.png"><img src="img/icehokey.png" class="img-responsive icon-sports" alt="" style="width:80px; height: 90px;"/></a><p><b>Ice Hockey</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=6&image_url=img/rugby.jpg"><img src="img/rugby.jpg" class="img-responsive icon-sports" alt="" style="width:80px; height: 90px;"/></a><p><b>Rugby</b></p></div>
         </div>
       </div>
     </div>
