--- a/fine_detail_list.html
+++ b/fine_detail_list.html
@@ -19,7 +19,7 @@
     </form>
     <div class="searchbar-overlay"></div>
     <div class="page-content">
-      <div class="list-block media-list virtual-list searchbar-found"></div>
+      <div class="list-block media-list virtual-list searchbar-found" style="margin-top:1px;"></div>
       <div class="list-block searchbar-not-found">
         <ul>
           <li class="item-content">
