--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
             <div class="login-screen-title" style="padding-top:45px; padding-bottom:15px; background: url('img/bg-pattern.png'), #93c01f">
                 <img id="img-profile-image" width="90px" height="90px" class="img-circle fit center">
                 <center> 
-                  <div id="div-profile-name" class="content-block-title" style="font-weight: bold;"></div>
+                  <div id="div-profile-name" class="content-block-title" style="font-weight: bold; padding-top:0px;"></div>
                 </center>
             </div>
           </div>
