--- a/team_stats.html
+++ b/team_stats.html
@@ -16,7 +16,7 @@
           <p style="color:white; margin-top:0px;"><font id="team-win-lose" size="2"></font></p>
           </center>
       </div>
-      <div class="list-block">
+      <div class="list-block" style="margin-top:1px;">
           <ul>
             <li>
               <div class="item-content">
@@ -74,6 +74,7 @@
                 </div>
               </div>
             </li>
+            <br /><br />
           </ul>
         </div> 
     </div>
