--- a/tournament_list.html
+++ b/tournament_list.html
@@ -20,7 +20,7 @@
     </form>
     <div class="searchbar-overlay"></div>
     <div class="page-content">
-      <div class="list-block virtual-list searchbar-found media-list"></div>
+      <div class="list-block virtual-list searchbar-found media-list" style="margin-top:1px;"></div>
       <div class="list-block searchbar-not-found">
         <ul>
           <li class="item-content">
