--- a/voting_result.html
+++ b/voting_result.html
@@ -16,7 +16,7 @@
         <center><p id="mvp-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
         <center><p id="mvp-opponent" style="color:white; margin-top:0px;"></p></center>
       </div>
-      <div class="list-block">
+      <div class="list-block" style="margin-top:1px;">
           <ul>
             <li>
               <div class="item-content">
