--- a/roster_tournament_stats.html
+++ b/roster_tournament_stats.html
@@ -20,7 +20,7 @@
         <center><p id="roster-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
         <center><p id="roster-position" style="color:white; margin-top:0px;"></p></center>
       </div>
-      <div class="list-block">
+      <div class="list-block" style="margin-top:1px;">
           <ul>
             <li>
               <div class="item-content">
