--- a/main.html
+++ b/main.html
@@ -18,12 +18,12 @@
     <!-- <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/envp-icon-e.png">
-    <!-- <link href="css/font.css" rel="stylesheet"> -->
+    <link href="css/font.css" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet"> -->
 
     <style>
       body {
-        /*font-family: 'Source Sans Pro', sans-serif;*/
+        font-family: 'Source Sans Pro', sans-serif;
       }
     </style>
   </head>
