--- a/administrator_list.html
+++ b/administrator_list.html
@@ -16,7 +16,7 @@
     </form>
     <div class="searchbar-overlay"></div>
     <div class="page-content">
-      <div class="list-block virtual-list searchbar-found media-list"></div>
+      <div class="list-block virtual-list searchbar-found media-list" style="margin-top:1px;"></div>
       <div class="list-block searchbar-not-found">
         <ul id="list-view-accounts">
           <li class="item-content">
