--- a/main.html
+++ b/main.html
@@ -136,10 +136,10 @@
                     </div>
                     <div class="content-block">
                       <!-- <p><a href="#" onclick="FBLogin();" class="button button-big button-fill button-raised color-indigo">Facebook</a></p> -->
-                      <center>
+                      <!-- <center> -->
                        <!--  <a href="" onclick="FBLogin();" class="link icon-only"><img src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/></a> -->
-                        <img onclick="FBLogin();" src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/>
-                      </center>
+                        <!-- <img onclick="FBLogin();" src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/>
+                      </center> -->
                     </div>
                     <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
                       <ul>
@@ -167,6 +167,8 @@
                       <p><a href="#" id="btn-email-login" class="button button-big button-fill button-raised color-teal">Log in with Email</a></p>
                       <p><a href="#" id="btn-signup-page" class="button button-big button-fill button-raised color-teal">Sign up with Email</a></p>
                       <p><center><a href="#" id="btn-forgot-pass">Forgot Password?</a></center></p>
+                      <p><center>OR</center></p>
+                      <p><a href="#" id="btn-facebook-login" onclick="FBLogin();" class="button button-big button-fill button-raised" style="background-color:#3B5998;"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i> Log in with Facebook</a></p>
                     </div>
                   </div>
                 </div>
