--- a/team_management.html
+++ b/team_management.html
@@ -13,6 +13,7 @@
           <a href="team_edit.html" id="btn-edit-team-detail" class="link icon-only">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
           </a>
+          <a href="#" id="btn-team-delete" class="link icon-only"><i class="fa fa-trash" aria-hidden="true"></i></a>
           <a href="#" id="open-right-panel" data-panel="right" class="link icon-only"><i class="icon icon-bars"></i></a>
         </div>
       </div>
